--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,8 @@
     <color name="white">#FFFFFFFF</color>
 
     <!-- Welaaa Color -->
-    <color name="welaaa_grey_100">#D9D9D9</color>
+    <color name="welaaa_grey_100">#F7F7F7</color>
+    <color name="welaaa_grey_300">#D9D9D9</color>
     <color name="welaaa_grey_400">#ACACAC</color>
     <color name="welaaa_grey_600">#767676</color>
     <color name="welaaa_grey_800">#444444</color>
