--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,108 +8,225 @@
 
     </data>
 
+    <!--            <com.google.android.material.tabs.TabLayout-->
+    <!--                android:id="@+id/tabs"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content">-->
 
-    <!--        <com.google.android.material.tabs.TabLayout-->
-    <!--            android:id="@+id/tabs"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content">-->
-
-    <!--            <com.google.android.material.tabs.TabItem-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:text="0xxx"/>-->
-    <!--            <com.google.android.material.tabs.TabItem-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:text="1xxx"/>-->
+    <!--                <com.google.android.material.tabs.TabItem-->
+    <!--                    android:layout_width="wrap_content"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:text="0xxx"/>-->
+    <!--                <com.google.android.material.tabs.TabItem-->
+    <!--                    android:layout_width="wrap_content"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:text="1xxx"/>-->
 
 
-    <!--        </com.google.android.material.tabs.TabLayout>-->
-    <LinearLayout
+    <!--            </com.google.android.material.tabs.TabLayout>-->
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <!--메인배너-->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_constraint_1"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="260dp"
-            android:background="@color/homoe_green"
-            android:paddingHorizontal="20dp"
-            android:paddingTop="27dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_home_pick"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <!--메인배너-->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_constraint_1"
+                android:layout_width="match_parent"
+                android:layout_height="260dp"
+                android:background="@color/homoe_green"
+                android:paddingHorizontal="20dp"
+                android:paddingTop="27dp">
 
-                android:text="윌라's PICK"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="@id/layout_constraint_1"
-                app:layout_constraintTop_toTopOf="@id/layout_constraint_1" />
+                <TextView
+                    android:id="@+id/tv_home_pick"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
 
-            <TextView
-                android:id="@+id/tv_home_main"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
-                android:text="자비로운 신은\n왜 인간에게\n고통을 주는가?"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@id/layout_constraint_1"
-                app:layout_constraintTop_toBottomOf="@id/tv_home_pick" />
+                    android:text="윌라's PICK"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_1"
+                    app:layout_constraintTop_toTopOf="@id/layout_constraint_1" />
 
-            <TextView
-                android:id="@+id/tv_home_sub"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                <TextView
+                    android:id="@+id/tv_home_main"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="28dp"
+                    android:text="자비로운 신은\n왜 인간에게\n고통을 주는가?"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_1"
+                    app:layout_constraintTop_toBottomOf="@id/tv_home_pick" />
+
+                <TextView
+                    android:id="@+id/tv_home_sub"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:text="신과 인간에 대한 고뇌와 탐구\n이문열 인생 역작을 듣다"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_1"
+                    app:layout_constraintTop_toBottomOf="@id/tv_home_main" />
+
+                <ImageView
+                    android:id="@+id/iv_home_main"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/home_banner_main"
+                    app:layout_constraintEnd_toEndOf="@id/layout_constraint_1"
+                    app:layout_constraintTop_toTopOf="@id/tv_home_pick"
+
+
+                    />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_constraint_2"
+                android:layout_width="match_parent"
+                android:layout_height="70.89dp"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="24dp"
-                android:text="신과 인간에 대한 고뇌와 탐구\n이문열 인생 역작을 듣다"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="@id/layout_constraint_1"
-                app:layout_constraintTop_toBottomOf="@id/tv_home_main" />
+                android:background="@color/homoe_pink">
 
-            <ImageView
-                android:id="@+id/iv_home_main"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tv_title_sub"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="13.96dp"
+                    android:layout_marginTop="12dp"
+                    android:text="제 남편은 결코 사람을 죽이지 않았어요"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_sub_sub"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:text="K-스릴러 <붉은 열대어>"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="@id/tv_title_sub"
+                    app:layout_constraintTop_toBottomOf="@id/tv_title_sub" />
+
+                <ImageView
+                    android:id="@+id/iv_home_sub"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="14.95dp"
+                    android:src="@drawable/home_banner_sub"
+                    app:layout_constraintBottom_toBottomOf="@id/layout_constraint_2"
+                    app:layout_constraintEnd_toEndOf="@id/layout_constraint_2" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_constraint_3"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/home_banner_main"
-                app:layout_constraintEnd_toEndOf="@id/layout_constraint_1"
-                app:layout_constraintTop_toTopOf="@id/tv_home_pick"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="54.11dp">
+
+                <TextView
+                    android:id="@+id/tv_rcyler_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="듣고 있던 오디오북! 계속 들어볼까요?"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_3"
+                    app:layout_constraintTop_toTopOf="@id/layout_constraint_3" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="149dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_3"
+                    app:layout_constraintTop_toBottomOf="@id/tv_rcyler_1" />
 
 
-                />
+                <TextView
+                    android:id="@+id/tv_rcyler_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="56dp"
+                    android:text="반유진님이 좋아할 만한 오디오북"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_3"
+                    app:layout_constraintTop_toBottomOf="@id/recyclerView_1" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="149dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_3"
+                    app:layout_constraintTop_toBottomOf="@id/tv_rcyler_2" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/tv_rcyler_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="56dp"
+                    android:text="이 달의 오디오북"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_3"
+                    app:layout_constraintTop_toBottomOf="@id/recyclerView_2" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_marginHorizontal="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="70.89dp"
-            android:background="@color/homoe_pink">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="149dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_3"
+                    app:layout_constraintTop_toBottomOf="@id/tv_rcyler_3" />
 
-            <TextView
-                android:id="@+id/tv_title_sub"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="제 남편은 결코 사람을 죽이지 않았어요"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/tv_rcyler_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="56dp"
+                    android:text="지금 막 녹음을 끝낸 오디오북"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_3"
+                    app:layout_constraintTop_toBottomOf="@id/recyclerView_3" />
 
-            <TextView
-                android:id="@+id/tv_sub_sub"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="K-스릴러 <붉은 열대어>"
-                app:layout_constraintStart_toStartOf="@id/tv_title_sub"
-                app:layout_constraintTop_toBottomOf="@id/tv_title_sub" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView_4"
+                    android:layout_width="match_parent"
+                    android:layout_height="149dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_3"
+                    app:layout_constraintTop_toBottomOf="@id/tv_rcyler_4" />
 
-    </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView_5"
+                    android:layout_width="match_parent"
+                    android:layout_height="149dp"
+                    android:layout_marginTop="56dp"
+                    app:layout_constraintStart_toStartOf="@id/layout_constraint_3"
+                    app:layout_constraintTop_toBottomOf="@id/recyclerView_4" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </LinearLayout>
+
+    </ScrollView>
 
 
 </layout>
