--- a/app/src/main/res/layout/item_rcyler_2.xml
+++ b/app/src/main/res/layout/item_rcyler_2.xml
@@ -15,40 +15,51 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:context=".presentation.home.view.HomeFragment"
-        android:paddingEnd="10dp">
+        android:paddingEnd="10dp"
+        tools:context=".presentation.home.view.HomeFragment">
 
 
         <ImageView
             android:id="@+id/thumbnailImage"
-            android:layout_width="100dp"
-            android:layout_height="147dp"
+            android:layout_width="156dp"
+            android:layout_height="228dp"
             app:bookImage="@{homeBook.image}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/home_book" />
 
         <TextView
-            android:layout_marginTop="8dp"
             android:id="@+id/tv_book_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="@{homeBook.title}"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/thumbnailImage"
-            tools:text="가나다"/>
+            tools:text="가나다" />
 
         <TextView
-            android:layout_marginTop="8dp"
             android:id="@+id/tv_book_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="@{homeBook.author}"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_book_title"
-            tools:text="라마바"/>
+            tools:text="라마바" />
+
+        <TextView
+            android:id="@+id/tv_book_story"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@{homeBook.description}"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_book_author"
+            tools:text="라마바" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
