--- a/app/src/main/res/layout/fragment_shelf.xml
+++ b/app/src/main/res/layout/fragment_shelf.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:style="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <data>
 
@@ -8,6 +14,234 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv_myshelf"
+            style="@style/TextAppearance.Welaaa.System1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="68dp"
+            android:text="내 서랍"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/ic_shelf_alert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="68dp"
+            android:layout_marginRight="23.02dp"
+            android:src="@drawable/ic_shelf_alert"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_shelf_profile"
+            android:layout_width="44dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="112dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/iv_shelf_profile"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toStartOf="@+id/tv_name"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_name"
+            style="@style/TextAppearance.Welaaa.System1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="71dp"
+            android:layout_marginTop="125dp"
+            android:text="우주최강10조"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_shelf_rectangle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:background="@drawable/background_shelf_rectangle"
+            app:layout_constraintBottom_toTopOf="@+id/v_line"
+            app:layout_constraintTop_toBottomOf="@id/tv_name">
+
+            <TextView
+                android:id="@+id/tv_time"
+                style="@style/TextAppearance.Welaaa.System4.Regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="19dp"
+                android:text="재생시간"
+                android:layout_marginEnd="238dp"
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintTop_toTopOf="@+id/cl_shelf_rectangle" />
+
+            <TextView
+                android:id="@+id/tv_time_min"
+                style="@style/TextAppearance.Welaaa.System2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="19dp"
+                android:text="30분"
+                android:layout_marginEnd="238dp"
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintBottom_toBottomOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintTop_toBottomOf="@+id/tv_time" />
+
+            <View
+                android:id="@+id/v_first"
+                android:layout_width="1dp"
+                android:layout_height="52dp"
+                android:layout_marginVertical="12dp"
+                android:layout_marginStart="106dp"
+                android:background="@color/welaaa_grey_300"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
+                android:layout_marginEnd="214dp"
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"/>
+
+            <TextView
+                android:id="@+id/tv_audio"
+                style="@style/TextAppearance.Welaaa.System4.Regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="130dp"
+                android:layout_marginTop="19dp"
+                android:layout_marginEnd="130dp"
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
+                android:text="오디오북"
+                app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintTop_toTopOf="@+id/cl_shelf_rectangle" />
+
+            <TextView
+                android:id="@+id/tv_audio_num"
+                style="@style/TextAppearance.Welaaa.System2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="130dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="19dp"
+                android:text="10권"
+                android:layout_marginEnd="130dp"
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintBottom_toBottomOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintTop_toBottomOf="@+id/tv_audio" />
+
+            <View
+                android:id="@+id/v_second"
+                android:layout_width="1dp"
+                android:layout_height="52dp"
+                android:layout_marginVertical="12dp"
+                android:layout_marginStart="214dp"
+                android:background="@color/welaaa_grey_300"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="106dp"
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle" />
+
+            <TextView
+                android:id="@+id/tv_class"
+                style="@style/TextAppearance.Welaaa.System4.Regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="238dp"
+                android:layout_marginTop="19dp"
+                android:text="클래스"
+                android:layout_marginEnd="22dp"
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintTop_toTopOf="@+id/cl_shelf_rectangle" />
+
+            <TextView
+                android:id="@+id/tv_class_num"
+                style="@style/TextAppearance.Welaaa.System2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="238dp"
+                android:layout_marginTop="12dp"
+                android:text="3회"
+                android:layout_marginEnd="22dp"
+                app:layout_constraintEnd_toEndOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintStart_toStartOf="@+id/cl_shelf_rectangle"
+                app:layout_constraintTop_toBottomOf="@+id/tv_class" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <View
+            android:id="@+id/v_line"
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:layout_marginTop="281dp"
+            android:background="#F7F7F7"
+            app:layout_constraintTop_toTopOf="parent"
+            style:ignore="MissingConstraints" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_shelf_book"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/v_line">
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tab"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="61dp"
+                android:background="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tabBackground="@color/white"
+                app:tabIndicator="@color/welaaa_logo_green"
+                app:tabMode="fixed"
+                android:layout_marginStart="20dp"
+                app:tabRippleColor="@null"
+                app:tabSelectedTextColor="@color/welaaa_logo_green"
+                app:tabTextColor="@color/welaaa_grey_600">
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="최근 목록" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="찜한 콘텐츠" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="다운로드" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="구매" />
+            </com.google.android.material.tabs.TabLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_item"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="19dp"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tab"
+                app:spanCount="3"
+                tools:listitem="@layout/item_body_shelf" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
