--- a/app/src/main/res/layout/item_body_search.xml
+++ b/app/src/main/res/layout/item_body_search.xml
@@ -6,33 +6,36 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/bg_search_category_book"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:src="@drawable/background_search_category_active"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="19dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        android:layout_marginHorizontal="20dp"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
     <ImageView
         android:id="@+id/iv_shelf_book"
-        android:layout_width="100dp"
-        android:layout_height="147dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/iv_shelf_book" />
+        android:layout_width="66dp"
+        android:layout_height="93dp"
+        app:layout_constraintEnd_toEndOf="@+id/bg_search_category_book"
+        app:layout_constraintBottom_toBottomOf="@+id/bg_search_category_book"
+        android:layout_marginEnd="16dp"
+        tools:src="@drawable/iv_search_category_book"
+        android:layout_marginBottom="1dp"/>
 
     <TextView
         android:id="@+id/tv_book_title"
-        style="@style/TextAppearance.Welaaa.System3.Title"
+        style="@style/TextAppearance.Welaaa.System1"
         android:layout_width="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="20dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/iv_shelf_book"
-        app:layout_constraintTop_toBottomOf="@+id/iv_shelf_book"
-        tools:text="거짓말" />
+        app:layout_constraintStart_toStartOf="@id/bg_search_category_book"
+        app:layout_constraintTop_toTopOf="@+id/bg_search_category_book"
+        tools:text="이달의 오디오북" />
 
     <TextView
         android:id="@+id/tv_book_author"
@@ -40,10 +43,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="@id/tv_book_title"
-        app:layout_constraintTop_toBottomOf="@+id/tv_book_title"
-        android:layout_marginBottom="5dp"
-        tools:text="김나은" />
+        android:layout_marginBottom="12dp"
+        tools:text="소설,인문,경제경영,자기계발,에세이..." />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
