--- a/app/src/main/res/layout/item_body_search.xml
+++ b/app/src/main/res/layout/item_body_search.xml
@@ -1,51 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/bg_search_category_book"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/background_search_category_active"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="19dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/bg_search_category_book"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="19dp"
+            android:src="@drawable/background_search_category_active"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-    <ImageView
-        android:id="@+id/iv_shelf_book"
-        android:layout_width="66dp"
-        android:layout_height="93dp"
-        app:layout_constraintEnd_toEndOf="@+id/bg_search_category_book"
-        app:layout_constraintBottom_toBottomOf="@+id/bg_search_category_book"
-        android:layout_marginEnd="16dp"
-        tools:src="@drawable/iv_search_category_book"
-        android:layout_marginBottom="1dp"/>
+        <ImageView
+            android:id="@+id/iv_shelf_book"
+            android:layout_width="66dp"
+            android:layout_height="93dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintBottom_toBottomOf="@+id/bg_search_category_book"
+            app:layout_constraintEnd_toEndOf="@+id/bg_search_category_book"
+            app:layout_constraintTop_toTopOf="@+id/bg_search_category_book"
+            tools:src="@drawable/iv_search_category_book" />
 
-    <TextView
-        android:id="@+id/tv_book_title"
-        style="@style/TextAppearance.Welaaa.System1"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="20dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/bg_search_category_book"
-        app:layout_constraintTop_toTopOf="@+id/bg_search_category_book"
-        tools:text="이달의 오디오북" />
+        <TextView
+            android:id="@+id/tv_book_category"
+            style="@style/TextAppearance.Welaaa.System1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/welaaa_grey_900"
+            app:layout_constraintStart_toStartOf="@id/bg_search_category_book"
+            app:layout_constraintTop_toTopOf="@+id/bg_search_category_book"
+            tools:text="이달의 오디오북" />
 
-    <TextView
-        android:id="@+id/tv_book_author"
-        style="@style/TextAppearance.Welaaa.System3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="@id/tv_book_title"
-        android:layout_marginBottom="12dp"
-        tools:text="소설,인문,경제경영,자기계발,에세이..." />
+        <TextView
+            android:id="@+id/tv_book_description"
+            style="@style/TextAppearance.Welaaa.System3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="12dp"
+            android:textColor="@color/welaaa_grey_400"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/tv_book_category"
+            tools:text="소설,인문,경제경영,자기계발,에세이..." />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
