style: color & string 정의 #7

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 
     <!-- Welaaa Color -->
     <color name="welaaa_grey_100">#F7F7F7</color>
+    <color name="welaaa_grey_200">#F0F0F0</color>
     <color name="welaaa_grey_300">#D9D9D9</color>
     <color name="welaaa_grey_400">#ACACAC</color>
     <color name="welaaa_grey_600">#767676</color>
