--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="60dp"
+            android:background="@color/white"
             app:layout_constraintBottom_toTopOf="@id/bnv_main"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
@@ -31,7 +32,7 @@
             <SeekBar
                 android:id="@+id/sb_mini_player_main"
                 android:layout_width="0dp"
-                android:layout_height="4dp"
+                android:layout_height="5dp"
                 android:max="100000"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
